# api/src/main/resources/api.yaml
@@ -101,6 +101,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/UserDto'
 
+  /api/v1/auth/login:
+    post:
+      tags:
+        - authentication
+      operationId: login
+      description: Login to the System
+      requestBody:
+        required: true
+        content:
+          application/json;charset=UTF-8:
+            schema:
+              $ref: '#/components/schemas/LoginDto'
+      responses:
+        200:
+          description: LoginDto
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthenticationResponseDto'
+
 components:
   schemas:
     AdvertisementDto:
@@ -163,4 +183,28 @@ components:
         password:
           type: string
           minLength: 8
+
+    LoginDto:
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: string
+          maxLength: 50
+          minLength: 2
+        password:
+          type: string
+          minLength: 8
+
+    AuthenticationResponseDto:
+      required:
+        - accessToken
+        - refreshToken
+      properties:
+        accessToken:
+          type: string
+        refreshToken:
+          type: string
+
 
