# server/src/main/java/hu/personal/caradvertiser/controller/AuthenticationController.java
@@ -1,6 +1,8 @@
 package hu.personal.caradvertiser.controller;
 
 import hu.personal.caradvertiser.AuthenticationApi;
+import hu.personal.caradvertiser.model.AuthenticationResponseDto;
+import hu.personal.caradvertiser.model.LoginDto;
 import hu.personal.caradvertiser.model.UserDto;
 import hu.personal.caradvertiser.service.AuthenticationService;
 import lombok.RequiredArgsConstructor;
@@ -11,8 +13,14 @@ import org.springframework.web.bind.annotation.RestController;
 @RestController
 public class AuthenticationController implements AuthenticationApi {
     private final AuthenticationService authenticationService;
+
     @Override
     public ResponseEntity<UserDto> signup(UserDto userDto) {
-        return null;
+        return ResponseEntity.ok(authenticationService.signup(userDto));
+    }
+
+    @Override
+    public ResponseEntity<AuthenticationResponseDto> login(LoginDto loginDto) {
+        return ResponseEntity.ok(authenticationService.login(loginDto));
     }
 }
