# server/src/main/java/hu/personal/caradvertiser/repository/UserRepository.java
@@ -3,5 +3,8 @@ package hu.personal.caradvertiser.repository;
 import hu.personal.caradvertiser.entity.User;
 import org.springframework.data.jpa.repository.JpaRepository;
 
+import java.util.Optional;
+
 public interface UserRepository extends JpaRepository<User, Long> {
+    Optional<User> findByUsername(String username);
 }
